@@ -2,7 +2,9 @@ PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 ?? ??? ????, PHP 8.1.24
 
-
+- MySQLnd:
+  . Fixed bug GH-10270 (Invalid error message when connection via SSL fails:
+    "trying to connect via (null)"). (Kamil Tekiela)
 
 31 Aug 2023, PHP 8.1.23
 
